# Crazy-Curves

./: CMakeLists.txt  LICENSE  README.md  index.html  main.js  manifest.xml  readme.md  style.css
.github/workflows/: build-and-deploy.yml  build-release-windows.yml  build.yml  buildin.yml  cmake-multi-platform.yml
CSXS/: manifest.xml
css/: style.css
include/: ae_sdk
js/: main.js  panel.js
src/: ActionHandler.cpp  ActionHandler.hpp  AnimationManager.cpp  AnimationManager.hpp  AutomationManager.cpp  AutomationManager.hpp  BackgroundProcessor.cpp  BackgroundProcessor.hpp  BatchProcessor.cpp  BatchProcessor.hpp  BenchmarkManager.cpp  BenchmarkManager.hpp  BezierCurve.cpp  BezierCurve.hpp  BezierCurveHandler.cpp  BezierCurveHandler.hpp  CacheManager.cpp  CacheManager.hpp  ChannelManager.cpp  ChannelManager.hpp  ChannelProcessor.cpp  ChannelProcessor.hpp  ColorManager.cpp  ColorManager.hpp  ColorProcessor.cpp  ColorProcessor.hpp  CommandHandler.cpp  CommandHandler.hpp  ConfigManager.cpp  ConfigManager.hpp  CrazyCurves.cpp  CrazyCurves.h  CrazyCurves.hpp  CurveCache.cpp  CurveCache.h  CurveCache.hpp  CurveData.cpp  CurveData.hpp  CurveEvaluator.cpp  CurveEvaluator.hpp  (+134 more)
src/effects/: CrazyCurves.cpp  curves.cpp  curves.h
src/utils/: math.cpp  math.h
tools/: dummy_cert.p12
